<resources>
    <string name="app_name">NavCompsDemo</string>
    <string name="about">About</string>
    <string name="amount">Amount</string>
    <string name="balance">Balance</string>
    <string name="check_balance">Check balance</string>
    <string name="check_transactions">Check transactions</string>
    <string name="cancel">Cancel</string>
    <string name="default_amount">Default amount</string>
    <string name="default_amount_saved">Default amount saved.</string>
    <string name="do_you_want_send_rs_value_to_value">Do you want to send Rs. %s to %s?</string>
    <string name="enter_amount">Enter amount.</string>
    <string name="enter_recipient_name">Enter recipient name.</string>
    <string name="enter_username_password">Enter username and password.</string>
    <string name="finish">Finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="login">Login</string>
    <string name="login_successful">Login successful.</string>
    <string name="logout">Logout</string>
    <string name="money_sent_to_value">Money sent to %s</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="recipient_name">Recipient name</string>
    <string name="password">Password</string>
    <string name="please_login_first">Please login first.</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="send_money">Send money</string>
    <string name="send_money_to_arg">Send money - {recipientName}</string> <!-- Dynamically setting the recipient name using arguments received in fragment. -->
    <string name="send_money_to_value">Send money to %s</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="username">Username</string>
    <string name="welcome_to_demo_bank">Welcome to Demo Bank</string>
    <string name="yes">Yes</string>
    <string name="welcome_user">Welcome %s</string>
</resources>